# pimlico

./: .gitignore  CMakeLists.txt  README.md  makefile  tasks.py
.github/: create_badge.py
.github/badges/: update_build_badge.py  update_coverage_badge.py  update_gist.py
.github/workflows/: build.yaml  test.yaml
binaries/: compiler
compiler/: .gitignore  tasks.py
compiler/configuration/: configuration.yaml
compiler/resources/: help_strings.yaml
compiler/source/: main.py
compiler/source/commands/: __init__.py  generate.py  parse.py
compiler/source/controllers/: __init__.py  build.py  generate.py  map.py  tree.py  validate.py
compiler/source/grammar/: README.md  __init__.py  production.py  program.py  rule.py  schema.py  term.py  test_production.py  test_rule.py  test_schema.py  test_term.py
compiler/source/interface/: __init__.py  build.py  command.py  help.py  map.py  parse.py  parser.py  run_build.py  run_help.py  test_parser.py  tree.py
compiler/source/text/: __init__.py  buffer.py  error_buffer.py  parse_bounded_text.py  parse_buffer.py  parse_buffer_c.py  parse_escape_code.py  parse_integer.py
compiler/source/tools/: error_log.py
compiler/source/utilities/: __init__.py  escape_code.py  format_c.py  get_configuration.py  get_library.py  get_root.py  indent_text.py  read_file.py  requires_escaping.py
compiler/test/: conftest.py
compiler/test/_grammar/: test_parse_production.py  test_parse_program.py  test_parse_rule.py  test_parse_term.py
compiler/test/_text/: test_parse_bounded_text.py  test_parse_buffer.py  test_parse_escape_code.py
compiler/test/utilities/: test_escape_code.py  test_indent_text.py
examples/: json.peg  pimlico.peg  test.peg
pimlico/: main.cpp  parse_logic_error.hpp  pimlico.hpp  rule.hpp  specification.hpp  syntax_error.hpp  syntax_tree.hpp  term.hpp  text_buffer.hpp  token.hpp
pimlico/error_buffer/: add.cpp  error_buffer.cpp  error_buffer.hpp  print.cpp
pimlico/error_buffer/error/: error.hpp
pimlico/grammar/: grammar.hpp  root.hpp  rule.hpp  term.hpp
pimlico/lexing/: lexer.flex  lexer.yy.cpp
pimlico/parse_buffer/: finished.cpp  get_character.cpp  increment.cpp  line_text.cpp  parse_buffer.cpp  parse_buffer.hpp  peek.cpp  read.cpp  skip.cpp  skip_line.cpp
pimlico/parsing/: parser.output  parser.tab.cpp  parser.tab.hpp  parser.y
pimlico/rule/: parse.cpp  rule.cpp  rule.hpp
pimlico/source/: parse.cpp  source.cpp  source.hpp
pimlico/term/: parse.cpp  parse_bounds.cpp  print.cpp  term.cpp  term.hpp
pimlico/term/terms/: parse_escape_code.hpp
pimlico/text_position/: print.cpp  text_position.cpp  text_position.hpp
scripts/: coverage.sh  test.sh
source/: .coverage  __init__.py  error_buffer.py  main.py  parse_buffer.py  pimlico.hpp
source/buffer/: buffer.hpp
source/buffer/error/: add.cpp  error.cpp  error.hpp  print.cpp  true.cpp
source/buffer/parse/: finished.cpp  get_character.cpp  increment.cpp  line_text.cpp  (+8 more)
source/commands/: __init__.py  generate.py  help.py  parse.py
source/error_buffer/: add.cpp  error_buffer.cpp  error_buffer.hpp  print.cpp
source/grammar/: __init__.py  production.py  program.py  rule.py  schema.py  term.py  test_production.py  test_rule.py  test_schema.py  test_tokenize.py  tokenize.py
source/parse_buffer/: finished.cpp  get_character.cpp  increment.cpp  line_indentation.cpp  line_text.cpp  parse_buffer.cpp  parse_buffer.hpp  peek.cpp  read.cpp  skip.cpp  skip_line.cpp  skip_space.cpp  skip_whitespace.cpp
source/parse_logic_exception/: parse_logic_exception.cpp  parse_logic_exception.hpp
source/pimlico/: main.py
source/print_engine/: print_engine.cpp  print_engine.hpp  render.cpp  replace.cpp
source/program/: parse.cpp
source/rule/: parse.cpp  rule.cpp
source/source/: parse.cpp  source.hpp
source/term/: parse.cpp  print.cpp  term.cpp
source/text/: __init__.py  buffer.py  colour.py  error_buffer.py  excerpt.py  parse_bounded_text.py  parse_buffer.py  parse_identifier.py  position.py
source/utilities/: __init__.py  in_range.py  is_identifier_letter.py
test/: conftest.py  grammar.peg  test  test.cpp  test_parse_buffer.py
test/_grammar/: test_parse_program.py  test_parse_rule.py  test_parse_term.py  test_production.py  test_program.py  test_rule.py  test_term.py
test/_text/: test_parse_bounded_text.py  test_parse_identifier.py
test/grammar/: test_term.py
test/parse_buffer/: finished.cpp  line_indentation.cpp  line_text.cpp  peek.cpp  read.cpp  skip_line.cpp  skip_space.cpp  skip_whitespace.cpp
test/print_engine/: render.cpp
test/scripts/: test.peg
test/text/: test_parse_bounded_text.py  test_parse_buffer.py
test/utilities/: test_in_range.py
tests/: test.peg  test.sh
tests/buffer/: test_create.cpp  test_parse.cpp  test_position.cpp
tests/grammar/: test.sh  test_expression.py  test_rule.py  test_source.py  test_term.py
tests/specification/: grammar.peg  test.sh
tests/term/: test.cpp  test.sh
tests/utilities/: __init__.py  test.py
(+314 files in other folders)
